<resources>
    <string name="app_name">DBApp</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a value</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_table">TableActivity</string>
    <string name="list_tables">List Of Tables</string>
    <string name="create_table">New Table</string>
    <string name="add_row">Add Row</string>
    <string name="descart">Cartesian Product</string>
    <string name="firstTable">1st table name:</string>
    <string name="operation">Choose operation:</string>
    <string name="newTable">New table</string>
    <string name="secondTable">2nd tabel name:</string>
    <string name="resultTable">Result table name:</string>
    <string name="ok">OK</string>
</resources>